fixed clear search button alignment

--- a/app/assets/stylesheets/components/song_index.scss
+++ b/app/assets/stylesheets/components/song_index.scss
@@ -56,6 +56,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    line-height: 100%;
     padding: 6px 8px;
     color: #aaa;
     &:hover {
